--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ click==8.3.1
 environs==14.6.0
 fastapi==0.129.1
 fastapi_cors==0.0.6
+fitdecode==0.11.0
+fitparse==1.2.0
 h11==0.16.0
 idna==3.11
 marshmallow==4.2.2
