mistral api key

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ STRAVA_CLIENT_SECRET=
 # Optional
 STRAVA_API_BASE_URL=https://www.strava.com/api/v3
 STRAVA_OAUTH_URL=https://www.strava.com/oauth/token
+
+# Mistral api key
+MISTRAL_API_KEY=
