Add language and prompt configuration options to LLM settings and services

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,12 @@ STRAVA_OAUTH_URL=https://www.strava.com/oauth/token
 
 # Mistral api key
 MISTRAL_API_KEY=
+
+# LLM prompt selection defaults
+LLM_DEFAULT_LANGUAGE=en
+# Optional personal override (for your local assistant language, e.g. fr)
+LLM_USER_LANGUAGE=
+LLM_GENERIC_PROMPT_BASENAME=system_base
+# Optional personal private prompt basename (e.g. my_profile)
+LLM_PRIVATE_PROMPT_BASENAME=
+LLM_PRIVATE_TEMPLATE_BASENAME=profile
