Instructions for non en / fr

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ MISTRAL_API_KEY=
 
 # LLM prompt selection defaults
 LLM_DEFAULT_LANGUAGE=en
-# Optional personal override (for your local assistant language, e.g. fr)
+# Optional personal override (for your local assistant language, e.g. fr. If other than fr / en, translate the prompts first)
 LLM_USER_LANGUAGE=
 LLM_GENERIC_PROMPT_BASENAME=system_base
 # Optional personal private prompt basename (e.g. my_profile)
