Add chat functionality and debug display to coach interface

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,7 @@ frontend/package-lock.json
 # Private Prompts
 backend/prompts/private/*
 
+# Local command cheat sheet
+COMMANDS.local.md
+
 .vscode/
